--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,12 @@
 services:
   - type: web
-    name: u2net-bg-remover
-    env: python
-    region: singapore  # or oregon/frankfurt/etc.
-    buildCommand: pip install -r requirements.txt
+    name: bg-remover-api
+    runtime: python
+    buildCommand: ""
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.10
+      - key: MODEL_PATH
+        value: u2net.pth
     plan: free
-    autoDeploy: true
