--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,7 @@ services:
   - type: web
     name: aiclearbg-frontend
     env: static
+    preBuildCommand: npm cache clean --force  # Clean npm cache to avoid dependency issues
     buildCommand: npm install && npm run build
     staticPublishPath: build
     autoDeploy: true
